# PromptMan

./: .dockerignore  Dockerfile  README.md  app_settings.py  database.py  diagnostic.py  get_config.py  main.py  optimizer_service.py  pyproject.toml  requirements.txt  ruff.toml  schemas.py  security.py  shared_cache.py  test_imports.py
.github/workflows/: ci.yml  docker.yml
alembic/versions/: 20260517_0005_auth_users_configs_rbac.py  20260517_0006_normalize_projects_table.py  20260517_0007_normalize_roles_table.py  20260518_0012_add_password_changed_at.py  20260521_0008_add_global_config_table.py  20260521_0013_add_cache_requests_table.py  6543f3d58168_merge_heads_to_resolve_multiple_head_.py
app_core/: api_version.py  lifecycle.py  logging_config.py
auth/: __init__.py  auth_service.py
cache/: __init__.py  persistence.py  shared_cache.py  ttl_cache.py
crud/: __init__.py  common.py  project.py  prompt.py  role.py  user.py
database/: cache_requests.sql
loadtests/: README.md  benchmark_rps.py  generate_charts.py  locustfile.py
loadtests/results/: benchmark_manifest.json  (+4 more)
middleware/: __init__.py  exception_logging.py  request_logging.py
models/: __init__.py  models.py
optimizer/: __init__.py  base.py  errors.py  jobs.py  leo_backend.py  provider_catalog.py  result.py  service.py  utils.py
plugin_engine/: __init__.py  api.py  contracts.py  engine.py
plugins/: README.md  sign_plugin.py  sign_via_service.py  trusted_signers.json
plugins_signin/: SIGNING_QUICKSTART.md
prompt_efficiency_analizer/: README.md  __init__.py  analyzer.py  cache_estimator.py  drift.py  quality_metrics.py  report.py  requirements.txt  segmentation.py  similarity.py  token_counter.py
routes/: __init__.py  admin_config.py  app_version.py  auth_bootstrap_admin.py  auth_change_password.py  auth_login.py  auth_me.py  auth_refresh.py  auth_status.py  llm_providers.py  optimize_config_get.py  optimize_config_update.py  optimize_jobs.py  optimize_prompt.py  optimize_provider_models.py  projects_create.py  projects_delete.py  projects_get.py  projects_list.py  projects_update.py  prompts_create.py  prompts_delete.py  prompts_get.py  prompts_list.py  prompts_search.py  prompts_update.py  prompts_update_tags.py  prompts_version_get.py  prompts_versions_list.py  roles_list.py  serve_ui.py  shared.py  users_create.py  users_delete.py  users_get.py  users_list.py  users_update.py  users_update_projects.py
schemas/: __init__.py  schemas.py
snippets/: test_api.py
tests/: conftest.py
(+130 files in other folders)
