[project]
name = "prompt-man"
version = "0.1.6"
description = "Prompt Man: FastAPI + Vue app for storing, versioning, and optimizing prompts"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.12",
    "requests>=2.33.1",
    "leo-prompt-optimizer>=1.0.9",
    "loguru>=0.7.2",
    "cryptography>=48.0.0"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",       # FastAPI TestClient
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "locust>=2.31.0",
    "matplotlib>=3.9.0",
    "sqlalchemy[mypy]>=2.0.0",
    "types-requests>=2.33.0",
]

# ---------------------------------------------------------------------------
# Dependency groups
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "locust>=2.31.0",
    "matplotlib>=3.9.0",
    "sqlalchemy[mypy]>=2.0.0",
    "types-requests>=2.33.0",
]

# ---------------------------------------------------------------------------
# Mypy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
explicit_package_bases = true
exclude = ["^snippets/", "^loadtests/", "^tests/"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["leo_prompt_optimizer.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app_core.*", "cache.*", "database", "middleware.*", "models", "models.*", "optimizer.*", "routes.shared"]
strict = true

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["app_core", "auth", "cache", "crud", "database", "main", "middleware", "models", "optimizer", "routes", "schemas"]
omit = ["snippets/*", "loadtests/*", "tests/*", "alembic/*"]

[tool.coverage.report]
skip_empty = true
show_missing = false
